Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-12032

[Debian 7] Storage age about 10-15% more for high priority bucket only as opposed to low priority bucket only.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • Triaged
    • No
    • June 30 - July 18

    Description

      Steps to reproduce:
      1)Create a low priority bucket and insert 100k items.
      2)get the storage age statistics.
      3)delete the low priority bucket and create a high priority bucket. insert 100k items.
      4)get the storage age statistics.
      5)upon repeating this test, it is consistently seen that storage age in case of high priority bucket only is 10-15% higher than low priority bucket.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            venu Venu Uppalapati (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty